# hexl-fpga

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGES.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CPPLINT.cfg  PREREQUISITE.md  README.md  build.sh  build_client.sh  build_server.sh  build_service.sh  hexl-fpga-BRIDGE-seal-4.0.0.patch  run.sh
benchmark/: CMakeLists.txt  bench_dyadic_multiply.cpp  bench_fwd_ntt.cpp  bench_inv_ntt.cpp  bench_keyswitch.cpp  bench_multlowlvl.cpp  main.cpp  micro_dyadic_multiply.sh  micro_fwd_ntt.sh  micro_inv_ntt.sh  micro_keyswitch.sh  micro_multlowlvl.sh
device/: CMakeLists.txt  CMakeLists.txt.mult  compile.sh  config.sh  device_types.hpp  dyadic_multiply.cl  dyadic_multiply.cpp  dyadic_multiply_keyswitch.cl  dyadic_multiply_keyswitch.cpp  fwd_ntt.cl  fwd_ntt.cpp  hexl_fpga.cl  inv_ntt.cl  inv_ntt.cpp  keyswitch.cl  keyswitch.cpp  mod_ops.hpp  multlowlvl.cpp  multlowlvl_top.cpp  relinearize.cpp
device/keyswitch/: autorun_kernel_instances.hpp  channels.h  common.h  dyadmult.cl  dyadmult.hpp  intt1.cl  intt1.hpp  intt1_forward.cl  intt1_forward.hpp  intt1_redu.cl  intt1_redu.hpp  intt2.cl  intt2_core.cl  intt2_core.hpp  intt2_forward.cl  intt2_forward.hpp  intt2_redu.cl  intt2_redu.hpp  intt_core.cl  intt_core.hpp  load.cl  load.hpp  ms.cl  ms.hpp  ntt1.cl  ntt1.hpp  ntt2.cl  ntt2.hpp  ntt_core.cl  ntt_core.hpp  params.hpp  pipes_keyswitch.hpp  store.cl  store.hpp  twiddle_factors.cl  twiddle_generator.hpp
device/lib/hls/: CMakeLists.txt  mod_ops.cpp  mod_ops.h
device/multiplyby/L0/: breakintodigits.hpp  intt.hpp  keyswitchdigits.hpp  load.hpp  ntt.hpp  number-theory.hpp  scale.hpp  store.hpp  tensorproduct.hpp  twiddle-factors.hpp  utils.hpp
device/multiplyby/L1/: CMakeLists.txt  breakintodigits.cpp  bringtoset.cpp  keyswitchdigits.cpp  tensorproduct.cpp
device/multiplyby/include/L1/: breakintodigits.h  bringtoset.h  common.h  intt.h  keyswitchdigits.h  launch_ntt.hpp  pipes.h  tensorproduct.h
device/multlowlvl/L0/: intt.hpp  load.hpp  scale.hpp
device/multlowlvl/L1/: helib_bgv.cpp  keySwitchDigits.cpp  reLinearize.cpp
device/multlowlvl/L2/: intt1.cpp  keySwitchDigits.cpp  load.cpp  multLowLvl.cpp  ntt1.cpp  reLinearize.cpp  store.cpp
device/multlowlvl/include/L1/: common.h  helib_bgv.h  intt.h  keySwitchDigits.h  multLowLvl.h  ntt.h  pipes.h  reLinearize.h  tensorProduct.h
device/multlowlvl/include/L2/: helib_bgv.h  intt.hpp  ntt.hpp  utils.h
device/multlowlvl/src/L0/: breakIntoDigits.hpp  def.hpp  keySwitchDigits.hpp  ntt.hpp  number_theory.hpp  store.hpp  tensorProduct.hpp  twiddle_factors.hpp  utils.hpp
device/multlowlvl/src/L1/: multLowLvl.cpp  multLowLvl.hpp  tensorProduct.cpp  tensorProduct.hpp
device/multlowlvl/src/L2/: utils.cpp
device/relinearize/include/L1/: breakintodigits.h  bringtoset.h  keyswitchdigits.h  ntt.h  pipes.h  tensorproduct.h
device/relinearize/include/L2/: breakintodigits-impl.hpp  breakintodigits.h  bringtoset-impl.h  bringtoset.h  keyswitchdigits-impl.hpp  keyswitchdigits.h  multlowlvl.h  reLinearize.h  tensorproduct-impl.hpp  tensorproduct.h  utils.h
device/relinearize/src/: CMakeLists.txt.old
device/relinearize/src/L0/: breakintodigits.hpp  intt.hpp  keyswitchdigits.hpp  load.hpp  ntt.hpp  scale.hpp  store.hpp  tensorproduct.hpp  twiddle-factors.hpp  utils.hpp
device/relinearize/src/L1/: breakintodigits.cpp  breakintodigits.hpp  bringtoset.cpp  keyswitchdigits.cpp  keyswitchdigits.hpp  tensorproduct.hpp
device/relinearize/src/L2/: CMakeLists.txt.old  breakintodigits.cpp  bringtoset.cpp  keyswitchdigits.cpp  multlowlvl.cpp  reLinearize.cpp  tensorproduct.cpp  utils.cpp
device/utils/: kernel_assert.hpp  pipe_array.hpp  pipe_array_internal.hpp  pipe_def_marcos.hpp  unroller.hpp
doc/: CMakeLists.txt  Doxyfile.in  index.rst
doc/v1.0/doxygen/html/: classdyadic__multiply__test.html  classes.html  classhetest_1_1utils_1_1AlignedAllocator.html  classhetest_1_1utils_1_1NTT_1_1NTTImpl.html  classintel_1_1hexl_1_1fpga_1_1Device-members.html  classintel_1_1hexl_1_1fpga_1_1StackTrace-members.html  classintel_1_1hexl_1_1fpga_1_1StackTrace.html  dir_44cec6e3ea30e076b9313c4641539d9f.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dyadic__multiply__int_8h_source.html  functions_func.html  functions_rela.html  globals_type.html  intt_8h.html  md__home_ymeng12_he-fpga-github_PREREQUISITE.html  namespaceintel.html  ntt_8hpp.html  (+6 more)
examples/: CMakeLists.txt  README.md  example_dyadic_multiply.cpp  example_dyadic_multiply.h  examples.cpp
experimental/bridge-seal/tests/: CMakeLists.txt  fpga_context.h  keyswitch-example.cpp  seal_test.sh
fpga-lr-microservice/client/: CMakeLists.txt
fpga-lr-microservice/server/: CMakeLists.txt
fpga-lr-microservice/service/: CMakeLists.txt  fpga_lr_microservice.sh  test_service_if.sh
host/: CMakeLists.txt
host/inc/: dl_kernel_interfaces.hpp  dyadic_multiply.h  dyadic_multiply_int.h  fpga.h  fpga_assert.h  fpga_context.h  hexl-fpga.h  intt.h  intt_int.h  keyswitch.h  keyswitch_int.h  multiplyby.h  multiplyby_int.h  multiplyby_utils.h  multlowlvl.h  multlowlvl_int.h  ntt.h  ntt_int.h  number_theory_util.h  relinearize.h  relinearize_int.h  stack_trace.h
host/src/: dl_kernel_interfaces.cpp  dyadic_multiply.cpp  fpga.cpp  fpga_context.cpp  fpga_int.cpp  hexl-fpga.cpp  intt.cpp  keyswitch.cpp  multiplyby.cpp  multiplyby_utils.cpp  multlowlvl.cpp  ntt.cpp  number_theory_util.cpp  relinearize.cpp  stack_trace.cpp  twiddle-factors.cpp
tests/: CMakeLists.txt  bitstream_dir.sh  dynamic_loading_kernel_IF.cpp  dynamic_loading_kernel_IF.h  dynamic_loading_kernel_IF.hpp  fpga_context.h  main.cpp  micro_dyadic_multiply.sh  micro_dyadic_multiply_keyswitch.sh  micro_fwd_ntt.sh  micro_hexl_fpga.sh  micro_inv_ntt.sh  micro_keyswitch.sh  micro_multlowlvl.sh  multLowLvl_runtime.cpp  multLowLvl_runtime.hpp  test_dyadic_multiply.cpp  test_dyadic_multiply_keyswitch.cpp  test_fwd_ntt.cpp  test_hexl_fpga.cpp  test_inv_ntt.cpp  test_keyswitch.cpp  test_multLowLvl.cpp  test_multlowlvl.cpp  test_relinearize.cpp
tests/test_utils/: ntt.cpp  ntt.hpp  utils-test.hpp
(+878 files in other folders)
